frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: frontend
    name: frontend
    namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
